# Camera_LiDAR_Fusion

./: README.md
Image_Detection_CNN/: README.md
Image_Detection_CNN/Evaluation/Images/: images.py
Image_Detection_CNN/Evaluation/Score/: evaluation.py
Image_Detection_CNN/TFRecord_Conversion/: kitti_label_map.pbtxt  record.py
Image_Detection_CNN/Transfer_Learning/: ssd_mobilenet_v1_kitti.config
KITTI_Dataset/: README.md
LiDAR_MLP/: README.md
LiDAR_MLP/Classification/: Cluster.py  classifier.py  train.py
LiDAR_MLP/Classification/Evaluation/: evaluate.py
LiDAR_MLP/Dataset/: CMakeLists.txt  avg_transform.txt  transform_mat.py
LiDAR_MLP/Dataset/include/: Classifier.h  Feature_Extractors.h  Labeler.h  Projector.h  Utils.h  Writer.h
LiDAR_MLP/Dataset/src/: Classifier.cpp  Feature_Extractors.cpp  Labeler.cpp  Projector.cpp  Utils.cpp  Writer.cpp  features.txt  main.cpp
catkin_ws/: README.md
catkin_ws/src/Detection_Fusion/: CMakeLists.txt  package.xml
catkin_ws/src/Detection_Fusion/include/: Cuda_Ops.h  Found_NMS.h  Fuser.h
catkin_ws/src/Detection_Fusion/launch/: fusion_detector.launch
catkin_ws/src/Detection_Fusion/models/: a_output_bias.txt  a_output_kernel.txt  avg_transforms.txt  class_output_bias.txt  class_output_kernel.txt  layer1_bias.txt  layer1_kernel.txt  length_output_bias.txt  length_output_kernel.txt  z_output_bias.txt  z_output_kernel.txt
catkin_ws/src/Detection_Fusion/msg/: BBox2D.msg  Detection3D.msg  Detections_Cloud.msg  Fusion.msg  Image_Detections.msg  Sensor_Data.msg
catkin_ws/src/Detection_Fusion/src/: Cuda_Ops.cu  Found_NMS.cpp  Fuser.cpp  image_detector_node.py  lidar_detector_node.cpp
catkin_ws/src/evaluator/: CMakeLists.txt  evaluator.py  package.xml  temp.py
catkin_ws/src/evaluator/launch/: evaluator.launch
catkin_ws/src/publisher/: CMakeLists.txt  main.cpp  package.xml
catkin_ws/src/publisher/launch/: publisher.launch
classification_attempt/: README.md  classification.py  dataset.py  helper.py  image_processing.py  imagenet_data.py  train.py
